force-app/main/default/objects/Trade_Deal__c/Trade_Deal__c.object-meta.xml
<CustomObject>
    <label>Trade Deal</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Trade Deal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>