force-app/main/default/objects/Trade_Deal__c/fields/Accrual_Days__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Days__c</fullName>
    <formula>Trade__r.Settlement_Date__c-Next_Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>