force-app/main/default/objects/Trade_Deal__c/fields/Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest__c</fullName>
    <formula>Accrual_Days__c*Per_Diem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrued Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>