force-app/main/default/objects/Trade_Deal__c/fields/Actual_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Funding_Date__c</fullName>
    <label>Actual Funding Date</label>
    <type>Date</type>
</CustomField>