force-app/main/default/objects/Trade_Deal__c/fields/Anticipated_Trade_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Trade_Date__c</fullName>
    <label>Anticipated Trade Date</label>
    <type>Date</type>
</CustomField>