force-app/main/default/objects/Trade_Deal__c/fields/ARV_LTV__c.field-meta.xml
<CustomField>
    <fullName>ARV_LTV__c</fullName>
    <formula>Total_Loan__c/As_Repaired_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARV LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>