force-app/main/default/objects/Trade_Deal__c/fields/As_Is_Initial_LTV__c.field-meta.xml
<CustomField>
    <fullName>As_Is_Initial_LTV__c</fullName>
    <formula>Initial_Draw__c/As_Is_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As Is/Initial LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>