force-app/main/default/objects/Trade_Deal__c/fields/As_Repaired_Value__c.field-meta.xml
<CustomField>
    <fullName>As_Repaired_Value__c</fullName>
    <label>As Repaired Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>