force-app/main/default/objects/Trade_Deal__c/fields/Assignment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Fees__c</fullName>
    <label>Assignment Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>