force-app/main/default/objects/Trade_Deal__c/fields/BPO_Date__c.field-meta.xml
<CustomField>
    <fullName>BPO_Date__c</fullName>
    <label>BPO Date</label>
    <type>Date</type>
</CustomField>