force-app/main/default/objects/Trade_Deal__c/fields/BPO_Value__c.field-meta.xml
<CustomField>
    <fullName>BPO_Value__c</fullName>
    <label>BPO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>