force-app/main/default/objects/Trade_Deal__c/fields/Cancelled_Draw_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Draw_Amount__c</fullName>
    <label>Cancelled Draw Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>