force-app/main/default/objects/Trade_Deal__c/fields/Closed_Date_Acquired_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Acquired_Date__c</fullName>
    <formula>Closing_Date__c -  Acquired_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date - Acquired Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>