force-app/main/default/objects/Trade_Deal__c/fields/Correspondent_Id__c.field-meta.xml
<CustomField>
    <fullName>Correspondent_Id__c</fullName>
    <formula>Trade__r.Correspondent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correspondent Id</label>
    <type>Text</type>
</CustomField>