force-app/main/default/objects/Trade_Deal__c/fields/Days_From_Paid_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Paid_Through_Date__c</fullName>
    <formula>IF(MONTH(Paid_Through_Date__c) == MONTH( Trade__r.Settlement_Date__c  ), 
    -(  
        (DATE(YEAR(Trade__r.Settlement_Date__c ),MONTH(Trade__r.Settlement_Date__c )+1,DAY(Trade__r.Settlement_Date__c ) ) -1 ) - Trade__r.Settlement_Date__c  + 1
    ),
 day(Trade__r.Settlement_Date__c )-1
 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days From Paid Through Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>