force-app/main/default/objects/Trade_Deal__c/fields/Docs_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Date__c</fullName>
    <label>Docs Date</label>
    <type>Date</type>
</CustomField>