force-app/main/default/objects/Trade_Deal__c/fields/Draw_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Draw_Cancelled_Date__c</fullName>
    <label>Draw Cancelled Date</label>
    <type>Date</type>
</CustomField>