force-app/main/default/objects/Trade_Deal__c/fields/Effective_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Effective_Loan_Amount__c</fullName>
    <formula>IF(OR( Trade__r.Cutoff_Date__c &gt;  Draw_Cancelled_Date__c, Cancelled_Draw_Amount__c &gt; 0 ), Total_Loan__c- Cancelled_Draw_Amount__c, Total_Loan__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>