force-app/main/default/objects/Trade_Deal__c/fields/Full_Appraisal_Value__c.field-meta.xml
<CustomField>
    <fullName>Full_Appraisal_Value__c</fullName>
    <label>Full Appraisal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>