force-app/main/default/objects/Trade_Deal__c/fields/Initial_Draw__c.field-meta.xml
<CustomField>
    <fullName>Initial_Draw__c</fullName>
    <label>Initial Draw</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>