force-app/main/default/objects/Trade_Deal__c/fields/Initial_LTC__c.field-meta.xml
<CustomField>
    <fullName>Initial_LTC__c</fullName>
    <formula>Initial_Draw__c/Purchase_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial LTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>