force-app/main/default/objects/Trade_Deal__c/fields/Interest_Calc__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calc__c</fullName>
    <formula>IF(ISBLANK( Trade__r.Interest_Calculation__c ), 0, IF(Trade__r.Interest_Calculation__c == &apos;Actual/365&apos;, 365, 360))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>