force-app/main/default/objects/Trade_Deal__c/fields/Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_ID__c</fullName>
    <label>Loan ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>