force-app/main/default/objects/Trade_Deal__c/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <formula>MAX(As_Is_Initial_LTV__c, ARV_LTV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>