force-app/main/default/objects/Trade_Deal__c/fields/Net_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds__c</fullName>
    <formula>Price__c*Effective_Loan_Amount__c + Accrued_Interest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>