force-app/main/default/objects/Trade_Deal__c/fields/Number_of_Bath__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bath__c</fullName>
    <label>Bath</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>