force-app/main/default/objects/Trade_Deal__c/fields/Number_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Beds__c</fullName>
    <label>Bed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>