force-app/main/default/objects/Trade_Deal__c/fields/Original_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Original_Interest_Rate__c</fullName>
    <label>Original Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>