force-app/main/default/objects/Trade_Deal__c/fields/Paid_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Through_Date__c</fullName>
    <label>Paid Through Date</label>
    <type>Date</type>
</CustomField>