force-app/main/default/objects/Trade_Deal__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential - Single Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>