force-app/main/default/objects/Trade_Deal__c/fields/Rehab_Holdback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Holdback_Amount__c</fullName>
    <label>Rehab Holdback Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>