force-app/main/default/objects/Trade_Deal__c/fields/Rehab_Holdback_as_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Holdback_as_of_Loan__c</fullName>
    <formula>Rehab_Holdback_Amount__c/Total_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Holdback as % of Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>