force-app/main/default/objects/Trade_Deal__c/fields/Repair_of_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Repair_of_Acquisition__c</fullName>
    <formula>Total_Rehab_Budget__c/Purchase_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair % of Acquisition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>