force-app/main/default/objects/Trade_Deal__c/fields/Repeat_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Borrower__c</fullName>
    <label>Repeat Borrower</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>