force-app/main/default/objects/Trade_Deal__c/fields/Seller_Concessions__c.field-meta.xml
<CustomField>
    <fullName>Seller_Concessions__c</fullName>
    <label>Seller Concessions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>