force-app/main/default/objects/Trade_Deal__c/fields/Strip_Interest__c.field-meta.xml
<CustomField>
    <fullName>Strip_Interest__c</fullName>
    <formula>IF( Original_Interest_Rate__c *  Strip_Percentage__c &gt;  Trade__r.Coupon_Floor__c , Original_Interest_Rate__c *  Strip_Percentage__c, Trade__r.Coupon_Floor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strip Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>