force-app/main/default/objects/Trade_Deal__c/fields/Strip_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Strip_Percentage__c</fullName>
    <formula>1 - Trade__r.Correspondent_Interest_Strip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strip Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>