force-app/main/default/objects/Trade_Deal__c/fields/Total_Drawn__c.field-meta.xml
<CustomField>
    <fullName>Total_Drawn__c</fullName>
    <label>Total Drawn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>