force-app/main/default/objects/Trade_Deal__c/fields/Total_Loan__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan__c</fullName>
    <label>Total Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>