force-app/main/default/objects/Trade_Deal__c/fields/Total_LTC__c.field-meta.xml
<CustomField>
    <fullName>Total_LTC__c</fullName>
    <formula>Total_Loan__c/Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>