force-app/main/default/objects/Trade_Deal__c/fields/Total_Rehab_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Rehab_Budget__c</fullName>
    <label>Total Rehab Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>