force-app/main/default/objects/Trade_Deal__c/fields/Trade_Status__c.field-meta.xml
<CustomField>
    <fullName>Trade_Status__c</fullName>
    <formula>Text(Trade__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Status</label>
    <type>Text</type>
</CustomField>