force-app/main/default/objects/Trade_Deal__c/fields/Undrawn__c.field-meta.xml
<CustomField>
    <fullName>Undrawn__c</fullName>
    <label>Undrawn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>