force-app/main/default/objects/Trade_Deal__c/fields/Valuation_Type__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Type__c</fullName>
    <label>Valuation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interior Appraisal/Interior BPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>