force-app/main/default/objects/Trade_Deal__c/validationRules/Lock_Deal_When_Trade_is_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Deal_When_Trade_is_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Trade__r.Status__c , &apos;Completed&apos;) &amp;&amp;  $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>Can not modify a deal once the Trade is completed.</errorMessage>
</ValidationRule>